# LLVMTargetParser

./: .gitignore  CMakeLists.txt  README.md  task.cmake  task.py
.devcontainer/: devcontainer.json
LLVM-Linux-X64/include/llvm/Config/: llvm-config.h
LLVM-Linux-X64/include/llvm/Support/: VCSRevision.h
include/llvm/Config/: config.h  llvm-config.h
